fixed an issue with screen input width on iphone

--- a/sc.css
+++ b/sc.css
@@ -219,7 +219,7 @@ p{
     .screen input{
         background-color:#99ccff;
         height:56px;
-        width:266px;
+        width:230px;
         color:black;
         border-radius: 15px;
         border: none;;
